--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
 	<title>DS Sample</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/deepstream.io-client-js/2.1.1/deepstream.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 	<script
   src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
   integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc="
@@ -29,6 +30,28 @@
 			<h2>Response</h2>
 			<div class="half left item">Multiply number with:</div>
 			<input type="text" value="7" class="half" id="response-value" />
+		</div>
+	</div>
+	<div class="group reqres">
+		<div class="half left">
+			<h2>Request</h2>
+			<button class="half left" id="update-location">Update Location</button>
+			<div class="half">
+        <input type="text" id="lng-value" class="half left" value="0"/>
+        <input type="text" id="lat-value" class="half left" value="0"/>
+<!--
+				<span class="response half item" id="display-response">-</span>
+				<span class="response half item" id="display-sub">-</span>
+-->
+			</div>
+		</div>
+		<div class="half">
+			<h2>Response</h2>
+      <div class="" id="objects-near-me">
+      </div>
+<!--			<div class="half left item">Multiply number with:</div>
+			<input type="text" value="7" class="half" id="response-value" />
+-->
 		</div>
 	</div>
 	<script type="text/javascript" src="js/example.js"></script>
